data/derived/comb/progs/unify/prog8691.ml.out
Characters 45-57:
  let fixpoint (f,b) = wwhile ((let b = f b in (bb, bb = f)),b);;
                                               ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
